fix spacing for left toolbar icons, cancel search alignment

--- a/src/_toolbar-frame.less
+++ b/src/_toolbar-frame.less
@@ -14,8 +14,9 @@
     padding: 6px 0;
     color: @faded-text;
 
-    .material-icons {
-      margin-left: 0;
+    > .dijitButton {
+      // wrapper for show/hide feeds
+      margin: 0;
     }
 
     .icon-syndicate {
@@ -25,21 +26,19 @@
     #toolbar-headlines .left,
     > .material-icons {
       position: relative;
-      top: -1px;
+      top: -2px;
       padding-left: 1px;
     }
-    > .material-icons {
-      left: 4px;
-      padding-right: 4px; // same as #updates-available for each icon
+    #updates-available {
+      padding-right: 0;
     }
     #feed_title {
-      display: flex;
       color: @default-text;
       font-size: 14px;
       font-weight: bold;
 
-      > .material-icons {
-        margin-left: 8px;
+      > * {
+        vertical-align: middle;
       }
     }
     #cancel_search {
